# compen

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  ingest.py  llm.py  main.py  models.py  schemas.py
backend/app/routers/: analysis.py  auth.py  events.py  ingest.py  projects.py
frontend/: Dockerfile  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[slug]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: CreateProjectDialog.tsx  Dashboard.tsx  InsightsPanel.tsx  ProjectList.tsx
frontend/src/lib/: api.ts  auth.ts
